# scheduling-lezat-backend

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/routes/: auth.py  health.py  integrations.py  scheduling.py  team_memberships.py  transcriptions.py
app/core/: config.py
app/schemas/: auth.py  health.py  integration.py  scheduling.py  team_membership.py  transcription.py
app/services/: action_item_creation_store.py  action_item_models.py  action_item_sync_service.py  auth_service.py  env_file_service.py  fireflies_api_client.py  gemini_action_items_client.py  google_calendar_client.py  health_service.py  monday_kanban_client.py  notion_calendar_client.py  notion_kanban_client.py  outlook_calendar_client.py  read_ai_api_client.py  scheduling_service.py  security_utils.py  team_membership_service.py  team_membership_store.py  transcription_service.py  transcription_store.py  user_store.py
tests/: test_action_item_models.py  test_action_item_sync_service.py  test_auth.py  test_gemini_action_items_client.py  test_google_calendar_client.py  test_health.py  test_integrations.py  test_monday_kanban_client.py  test_outlook_calendar_client.py  test_team_memberships.py  test_transcriptions.py
